# logistics

./: .gitignore  README.md  docker-compose.yml
web/: .env  Dockerfile  pyproject.toml
web/jobs/: factories.py  models.py  schema.py  test_jobs_mutations.py
web/jobs/management/commands/: test_data.py
web/jobs/migrations/: 0001_initial.py
web/logistics/: schema.py  settings.py  urls.py
web/vehicles/: factories.py  models.py  schema.py
web/vehicles/migrations/: 0001_initial.py
